@@ -29,6 +29,7 @@ BUGFIXES
             well as PEAR modifications.
 
 IMPROVEMENTS
+09-09-05    Updated perms and perms and assignments to reflect new modules
 08-09-05    Added new RSS exporter module (Fabio Bacigalupo)
 08-09-05    Cleaned up implementation of alternating row colours with switchRowClass
             (Riccardo Magliocchetti)
